development/error
g++-4.8 -std=c++1y -pedantic-errors -Wall -Wconversion main.cpp ../../foam/strlib/strlib.cpp -o run -I/usr/local/include -I../../ -lpqxx -lpq -L/usr/local/lib -lconfig++
main.cpp: In function ‘void test_join(tagsql::development::data_context&)’:
main.cpp:96:34: error: conversion from ‘int’ to non-scalar type ‘tagsql::development::deferred_range<tagsql::development::bucket<std::tuple<>, tagsql::development::schema::author_t, tagsql::development::null, foam::meta::typelist<tagsql::development::join_tag<tagsql::development::schema::book_t, tagsql::development::join_type::left, tagsql::development::null>, tagsql::development::join_tag<tagsql::development::schema::review_t, tagsql::development::join_type::inner, tagsql::development::null> >, foam::meta::typelist<tagsql::development::binary_expression<tagsql::development::column_expression<tagsql::development::book_tag::author_id_t>, tagsql::development::column_expression<tagsql::development::author_tag::author_id_t>, tagsql::development::op::eq_t<tagsql::development::book_tag::author_id_t> >, tagsql::development::binary_expression<tagsql::development::column_expression<tagsql::development::review_tag::reviewer_id_t>, tagsql::development::column_expression<tagsql::development::author_tag::author_id_t>, tagsql::development::op::eq_t<tagsql::development::review_tag::reviewer_id_t> > >, tagsql::development::null, tagsql::development::null, tagsql::development::null, tagsql::development::null, tagsql::development::null, tagsql::development::null> >::value_type {aka 
	
	std::tuple<
		std::basic_string<char, std::char_traits<char>, std::allocator<char> >, 
		std::basic_string<char, std::char_traits<char>, std::allocator<char> >, 
		long int, 
		std::basic_string<char, std::char_traits<char>, std::allocator<char> >, 
		long int, 
		long int, 
		long int, 
		long int, 
		tagsql::development::review_tag::mystring, 
		std::basic_string<char, std::char_traits<char>, std::allocator<char> >, 
		std::basic_string<char, std::char_traits<char>, std::allocator<char> >, 
		short int, 
		std::basic_string<char, std::char_traits<char>, std::allocator<char> >, 
		long int
			>}’ requested
	
  decltype(items)::value_type x = 0;
                                  ^
make: *** [all] Error 1
